# nsak

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.gitlab/issue_templates/: Bug.md  Feature.md  Meeting.md  Task.md
additional/: banana_pi_bpi_setup.md  brainstorm.md  kali_linux_on_arm_hw.md  nsak – Scenario & Drill Concept Summary.md
additional/bananapi_r4/: banana_pi_bpi_setup.md
additional/bananapi_r4/network/: 05-eth0.network  20-lan0.network
additional/frank/research/: dnsmasq-drill.md
additional/frank/rouge-ap/: dnsmasq-drill.md  dnsmasq.md  troubleshooting.md
docs/assets/uml-diagrams/: concept-diagram.drawio
docs/bf_templates_and_examples/bfhthesis/: .gitignore  .latexmkrc  README.md  bfhthesis.tex  project.bib
docs/bf_templates_and_examples/examples/: DEMO-BFHPub.tex
docs/documentation/: documentation.tex  references.bib  timelog.md
docs/documentation/content/: 01-abstract.tex  02-introduction.tex  03-current-state-of-research.tex  04-evaluation.tex  04-framework-concepts.tex  04-hardware-evaluation.tex  05-hardware-specification.tex  05-network-environments.tex  05-specification.tex  06-framework-technology-stack.tex  06-user-story.tex  07-component-diagram.tex  07-system-dependencies.tex  07.1-sequence-diagram.tex  08-framework-concepts.tex  08-hardware-evaluation.tex  09-user-story.tex  10-component-diagram.tex  10-implementation.tex  10.1-sequence-diagram.tex  11-appendix.tex  11-method.tex  11.1-evaluation.tex  11.2-discussion.tex  12-future-work.tex  12-implementation.tex  12.1-evaluation.tex  12.2-discussion.tex  13-conclusion.tex  13-future-work.tex  14-appendix.tex  14-conclusion.tex  abstract.tex  architecture-and-design.tex  conclusion.tex  evaluation.tex  future-work.tex  glossary.tex  implementation.tex  introduction.tex  (+3 more)
docs/presentation/: Nsak-presentation.tex  nsak-presentation.tex
docs/presentation/content/: 01-introduction.tex  02-arp-spoofing.tex  02-design-and-architecture.tex  03-hardware-evaluation.tex  04-conclusion.tex  04-nsak-framework.tex  05-mitm.tex  06-rogue-ap.tex  07-conclusion.tex  example.tex
docs/presentations/: Nsak-presentation.tex
docs/research/: resources.md  zenguard_a_machine_learning.md  zero_trust_architecture_a_systematic_literature_review.md
lib/devices/bananapi_r4/: .env  README.md  banana_pi_bpi_setup.md
lib/drills/ap_mod/: config.py  drill.py  drill.yaml
lib/drills/arp_spoof/: drill.py  drill.yaml
lib/drills/discover_hosts/: drill.py  drill.yaml
lib/drills/dnsmasq/: README.md  drill.py  drill.yaml
lib/drills/hello_world/: drill.py  drill.yaml
lib/drills/nat_forwarding/: README.md  drill.py  drill.yaml
lib/drills/network_setup/: README.md  drill.py  drill.yaml
lib/drills/transparent_tcp_proxy/: drill.py  drill.yaml
lib/drills/tshark_capture/: drill.py  drill.yaml
lib/environments/simple_tcp_client_server/: README.md  alice.py  bob.py  compose.yaml  connection.py  environment.yaml
lib/scenarios/mitm/: README.md  scenario.py  scenario.yaml
lib/scenarios/rogue_ap_scenario/: README.md  scenario.py  scenario.yaml
lib/scenarios/rouge_ap_scenario/: scenario.py  scenario.yaml
lib/scenarios/test-scenario/: scenario.py
lib/scenarios/test_scenario/: scenario.py  scenario.yaml
src/: Dockerfile  cli-cmd.py
src/cli/: __init__.py  drill.py  scenario.py
src/core/: __init__.py  config.py  setup.py
src/core/drill/: __init__.py  drill.py  drill_loader.py  list_drills.py
src/core/scenario/: __init__.py  build_scenario.py  collect_dependencies.py  get_scenario.py  list_drills.py  list_scenarios.py  run_scenario.py  scenario.py  scenario_loader.py
src/drills/hello/: drill.py  drill.yaml
src/nsak/: __init__.py
src/nsak/cli/: __init__.py  cli-cmd.py  drill.py  environment.py  scenario.py
src/nsak/core/: __init__.py  config.py  setup.py
src/nsak_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scenarios/test-scenario/: scenario.py  (+1 more)
(+53 files in other folders)
