[project]
name = "nsak"
version = "0.1.0"
description = "The prototype CLI tool to manage nsak resources and systems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "click>=8.3.1",
    "scapy>=2.6.1",
    "netfilterqueue>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "types-pyyaml>=6.0.12.20250915",
    "types-click>=7.1.8",
    "pytest>=9.0.1",
]

[project.scripts]
nsak = "nsak:cli"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.mypy]
files = ["."]
exclude = ["lib"]
strict = true
ignore_missing_imports = true
plugins = []

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "lib",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # complexe-structure: https://docs.astral.sh/ruff/rules/complex-structure/
    "C901",
    # pycodesyle: https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E4",
    "E7",
    "E9",
    # pyflakes: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F",
     # isort: https://docs.astral.sh/ruff/rules/#isort-i
    "I",
    # pep8-nameing: https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",
    # pydocsstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D",
    # flake8-annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ANN",
    # flake8-bandit: https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "S",
    # flake8-bugbear: https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B",
    # flake8-datetimez: https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "DTZ",
    # flake8-errmsg: https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "EM",
    # flake8-logging: https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "LOG",
    # flake8-logging-format: https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "G",
    # flake8-print: https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "T20",
    # flake8-pytest-style: https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "PT",
    # flake8-gettext: https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "INT",
    # ruff: https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "RUF",
]
ignore = ["D100", "D104", "D200", "D401",]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # asser should be allowed in tests
    "ARG", # Unused function args -> fixtures
    "FBT", # Allow booleans in funciton calls, e.g. for @pytest.mark.parametrize()
    "PLR2004", # Magic value or numbers should be allowed in tests
]

[pytest]
pythonpath = ["src"]
